--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
 
-<h1>Hugo with Webpack, Sass, and PostCSS</h1>
+<h1>Sicus Curiositatis</h1>
 
-<h3>Hooray 🎉 - you've built this with <a href="https://github.com/netlify/victor-hugo">Victor-Hugo</a>!</h3>
+<h3>Blog powered with Hugo, hosted in netlify and handled with forestry.io </h3>
 
 <a href="{{ "/tech" | relURL }}">Check out the tech</a>
 
