--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,7 +2,7 @@
 
 <h1>Sicus Curiositatis</h1>
 
-<h3>Blog powered with Hugo, hosted in netlify and handled with forestry.io </h3>
+<h3>Blog powered with Hugo, hosted in netlify </h3>
 
 <a href="{{ "/tech" | relURL }}">Check out the tech</a>
 
